// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <div
          class="sc-iwyYcG idELnL"
        >
          <span
            class="sc-cxFLnm eYoSiB"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fodVxV fJBwjx"
          id="testId"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value="3232a"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV jDWudo"
  id="testId"
  name="telephone"
  placeholder="Numer telefonu"
  prefix="+48"
  style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="telephone"
      >
        FirstName*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <div
          class="sc-iwyYcG idELnL"
        >
          <span
            class="sc-cxFLnm eYoSiB"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fodVxV fJBwjx"
          id="testId"
          label="FirstName"
          name="telephone"
          placeholder="Numer telefonu*"
          prefix="+48"
          required=""
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <div
          class="sc-iwyYcG hwAKcq"
        >
          <span
            class="sc-cxFLnm eYoSiB"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fodVxV jDWudo"
          id="testId"
          label="Telephone"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
